--- a/module-control-index.html
+++ b/module-control-index.html
@@ -19,37 +19,45 @@
                 <h5 class="card-title">Module Controller</h5>
                     <button id="aa-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('0')">Waiting room</button>
                     <hr>
-                    <button id="bb-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1</button>
+                    <button id="bb-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1 รับไม่รับโทนิค</button>
                     <hr>
-                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2</button>
+                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2 ไปดาว earth tau high</button>
                     <hr>
-                    <button id="dd-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3a')">Module 3a</button>
+                    <button id="dd-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3a')">Module 3a รับหรือไม่รับ SYMPH</button>
                     <hr>
-                    <button id="ee-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3b')">Module 3b</button>
+                    <button id="ee-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3b')">Module 3b รับหรือไม่รับ SYNTH</button>
                     <hr>
-                    <button id="ff-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.1')">Module 2g SYMPH</button>
+                    <button id="ff-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.1')">Module 2g มากับ SYMPH ใครปลอบ SOLO</button>
                     <hr>
-                    <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.2')">Module 2g SYNTH</button>
+                    <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.2')">Module 2g มากับ SYNTH ใครปลอบ SOLO</button>
                     <hr>
                     <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
                     <hr>
-                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">Module นายพล 2d SYMPH / 2F.1</button>
+                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">Module นายพล 2d มากับ SYMPH ชนะ Fight mode</button>
                     <hr>
-                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">Module นายพล 2d SYNTH / 2F.1</button>
+                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">Module นายพล 2d มากับ SYNTH ชนะ Fight mode</button>
                     <hr>
-                    <button id="kk-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2e')">Module นายพล 2e</button>
+                    <button id="kk-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2e')">Module นายพล 2e แพ้ fight mode</button>
                     <hr>
-                    <button id="ll-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2f')">Module นายพล 2f</button>
+                    <button id="ll-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2f')">Module นายพล 2f แพ้ fight mode โทนิคมาช่วย</button>
                     <hr>
-                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSymph')">Module 5.1a SYMPH</button>
+                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSymph')">Module 5.1a SYMPH Terminal ใครสำรวจดาว มากับโทนิค</button>
                     <hr>
-                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSymph')">Module 5.1b SYMPH</button>
+                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSymph')">Module 5.1b SYMPH Terminal ใครสำรวจดาว</button>
                     <hr>
-                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSynth')">Module 5.1a SYNTH</button>
+                    <button id="oo-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSynth')">Module 5.1a SYNTH Elysium ใครสำรวจดาว มากับโทนิค</button>
                     <hr>
-                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSynth')">Module 5.1b SYNTH</button>
+                    <button id="pp-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSynth')">Module 5.1b SYNTH Elysium ใครสำรวจดาว</button>
                     <hr>
-                    <button id="นน-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.2b')">Module 5.2b</button>
+                    <button id="qq-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.2b')">Module 5.2b ให้โทนิคอยู่หรือไป</button>
+                    <hr>
+                    <button id="rr-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.3')">Module 6.3 ไปต่อหรือกลับบ้าน</button>
+                    <hr>
+                    <button id="ss-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4')">Module 6.4 รับ Minor มั้ย</button>
+                    <hr>
+                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9')">Module 6.4 กลับบ้านหรือช่วยโทนิค</button>
+                    <hr>
+                    <button id="uu-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('7')">Module 7 สู้หรือยอมยานแม่ทัพ</button>
               </div>
             </div>
         </div>
