--- a/modules/interface/module5-1aSynth.html
+++ b/modules/interface/module5-1aSynth.html
@@ -53,7 +53,7 @@
             
             <h1 style="color: #f5eced">ALGORITHM PROCESSING</h1>
             <br>
-            <h3 style="color: #f5eced">"Terminal"</h3>
+            <h3 style="color: #f5eced">"Elysium"</h3>
             <h4 style="color: #f5eced">ให้ SYNTH ลงไปสำรวจดาวหรือไม่?</h4>
             <br>
             <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">SYNTH สำรวจ</button>
