--- a/modules/interface/module6-9.html
+++ b/modules/interface/module6-9.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 5.1b</title>
+    <title>Module 6.9</title>
     <link rel="stylesheet1" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet2" href="style.css" />
     <link rel="stylesheet3" href="https://fonts.googleapis.com/css?family=Kanit">
@@ -53,13 +53,13 @@
             
             <h1 style="color: #f5eced">ALGORITHM PROCESSING</h1>
             <br>
-            <h3 style="color: #f5eced">"Elysium"</h3>
-            <h4 style="color: #f5eced">ให้ใครลงไปสำรวจดาว?</h4>
+            <h3 style="color: #f5eced">"Where is your VIBE"</h3>
+            <h4 style="color: #f5eced">The Vibe ของคุณอยู่ที่ไหน?</h4>
             <br>
-            <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">SYNTH</button>
+            <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">กลับบ้าน</button>
             <br>
             <br>
-            <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('2')">TONIC</button>
+            <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('2')">ไปช่วยพ่อของ TONIC</button>
         </div>
     </div>
 
@@ -69,7 +69,7 @@
             element.onclick = "";
             var element = document.getElementById("tt-btn");
             element.onclick = "";
-            myVotingChannel5.publish("vote", choice, (err) => {
+            myVotingChannel69.publish("vote", choice, (err) => {
                 console.log(choice);
                 console.log(err);
             });
