--- a/current-module.html
+++ b/current-module.html
@@ -32,7 +32,7 @@
       <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">standing by ...</h1>
       </div>
 
-      <iframe src="https://openchat-bf02b.web.app/chat/room2" style="height: 300px;width:400px;text-align: center;" title="Iframe Example"></iframe>
+      <iframe src="https://openchat-bf02b.web.app/chat/room3" style="height: 300px; width:280px; text-align: center; border: none;" title="Iframe Example"></iframe>
   </body>
 
   <script src="current-module.js" type="text/javascript"></script>
