--- a/current-module.html
+++ b/current-module.html
@@ -32,8 +32,11 @@
       <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">standing by ...</h1>
       </div>
 
-      <iframe src="https://openchat-bf02b.web.app/chat/room7" style="height: 300px; width:280px; text-align: center; border: none;" title="Iframe Example"></iframe>
-  </body>
+      <iframe src="https://openchat-bf02b.web.app/chat/room7" style="height: 300px; width:375px; text-align: center; border: none;" title="Iframe Example"></iframe>
+  
+      <img src="stave_map_v.jpg" alt="stave_v" width="375" height="666">
+
+    </body>
 
   <script src="current-module.js" type="text/javascript"></script>
   
