--- a/current-module.html
+++ b/current-module.html
@@ -31,7 +31,16 @@
       <br>
       <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">standing by ...</h1>
       </div>
-  </body>
+
+      <hr>
+
+      <iframe src="https://openchat-bf02b.web.app/chat/room21" style="height: 300px; width: 350px; text-align: center; border: none;" title="Iframe Example"></iframe>
+  
+      <hr>
+      
+      <img src="stave_map_v.jpg" alt="stave_v" width="375" height="666">
+
+    </body>
 
   <script src="current-module.js" type="text/javascript"></script>
   
