--- a/modules/interface/module2e.html
+++ b/modules/interface/module2e.html
@@ -44,7 +44,7 @@
         }
 
         .w3-button1{ color: #87cdee;}
-        .w3-button2{ color: #bdbdbd;font-size: 25px;}
+        .w3-button2{ color: #545454;font-size: 25px;}
         .w3-button3{ color: #ff8d9b;font-size: 25px;}
     </style>
 </head>
