--- a/modules/interface/module6-3.html
+++ b/modules/interface/module6-3.html
@@ -43,8 +43,8 @@
         text-shadow: 1px 1px 2px gray, 0 0 25px white, 0 0 5px whitesmoke;
         }
 
-        .w3-button1{ color: #87cdee;}
-        .w3-button2{ color: #efaeae;font-size: 35px;}
+        .w3-button1{ color: #efaeae;font-size: 25px;}
+        .w3-button2{ color: #87cdee;font-size: 35px;}
     </style>
 </head>
 <body>
