--- a/modules/interface/module7.html
+++ b/modules/interface/module7.html
@@ -44,7 +44,7 @@
         }
 
         .w3-button1{ color: #87cdee;}
-        .w3-button2{ color: #efaeae;font-size: 35px;}
+        .w3-button2{ color: #696565;font-size: 35px;}
     </style>
 </head>
 <body>
