--- a/module-control-index.html
+++ b/module-control-index.html
@@ -27,15 +27,17 @@
                     <hr>
                     <button id="ee-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3b')">Module 3b รับหรือไม่รับ SYNTH</button>
                     <hr>
+                    <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
+                    <hr>
                     <button id="ff-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.1')">Module 2g มากับ SYMPH ใครปลอบ SOLO</button>
                     <hr>
                     <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.2')">Module 2g มากับ SYNTH ใครปลอบ SOLO</button>
                     <hr>
-                    <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
+                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d')">ชนะ Fight mode ไป รูหนอน/ อ้อมรูหนอน</button>
                     <hr>
-                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">Module นายพล 2d มากับ SYMPH ชนะ Fight mode</button>
+                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">ชนะ Fight mode มากับ SYMPH ไป terminal/ รูหนอน/ อ้อมรูหนอน</button>
                     <hr>
-                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">Module นายพล 2d มากับ SYNTH ชนะ Fight mode</button>
+                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">ชนะ Fight mode มากับ SYNTH ไป terminal/ รูหนอน/ อ้อมรูหนอน</button>
                     <hr>
                     <button id="kk-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2e')">Module นายพล 2e แพ้ fight mode</button>
                     <hr>
