--- a/modules/interface/module2d-symph.html
+++ b/modules/interface/module2d-symph.html
@@ -43,8 +43,8 @@
         text-shadow: 1px 1px 2px gray, 0 0 25px white, 0 0 5px whitesmoke;
         }
 
-        .w3-button1{ color: #ccffcc;}
-        .w3-button2{ color: #8df8ff;font-size: 45px;}
+        .w3-button1{ color: #ccffcc;font-size: 30px;}
+        .w3-button2{ color: #8df8ff;font-size: 30px;}
         .w3-button3{ color: #000000;font-size: 30px;}
     </style>
 </head>
