--- a/modules/interface/module6-4.html
+++ b/modules/interface/module6-4.html
@@ -43,8 +43,9 @@
         text-shadow: 1px 1px 2px gray, 0 0 25px white, 0 0 5px whitesmoke;
         }
 
-        .w3-button1{ color: #87cdee;}
-        .w3-button2{ color: #efaeae;font-size: 35px;}
+        .w3-button1{ color: #adf7ad;font-size: 30px;}
+        .w3-button2{ color: #aed5ef;font-size: 30px;}
+        .w3-button3{ color: #efaeae;font-size: 30px;}
     </style>
 </head>
 <body>
@@ -62,7 +63,7 @@
             <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('2')">รับ MINOR ทิ้ง TONIC</button>
             <br>
             <br>
-            <button id="mm-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('3')">ฆ่า MINOR</button>
+            <button id="mm-btn" type="button" class="w3-button w3-button3 w3-border w3-round-large w3-ripple" onclick="castVote('3')">ฆ่า MINOR</button>
         </div>
     </div>
 
