--- a/current-module.html
+++ b/current-module.html
@@ -38,7 +38,7 @@
   
       <hr>
       
-      <img src="stave_map_v.jpg" alt="stave_v" width="375" height="666">
+      <img src="stave_map_v_low.jpg" alt="stave_map_v_20-23" width="375" height="666">
 
     </body>
 
