--- a/module-control-index.html
+++ b/module-control-index.html
@@ -59,6 +59,10 @@
                     <hr>
                     <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9')">Module 6.9 กลับบ้านหรือช่วยโทนิค</button>
                     <hr>
+                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Symph')">Module 6.9 กลับบ้านหรือช่วย Symph</button>
+                    <hr>
+                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Synth')">Module 6.9 กลับบ้านหรือช่วย Synth</button>
+                    <hr>
                     <button id="uu-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('7')">Module 7 สู้หรือยอมยานแม่ทัพ</button>
               </div>
             </div>
