--- a/modules/graph/graph2d.html
+++ b/modules/graph/graph2d.html
@@ -6,7 +6,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Module 2g-1 results</title>
+    <title>Module 2d results</title>
     <script
       type="text/javascript"
       src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"
@@ -61,7 +61,7 @@ function updateChartData() {
         value: choiceEighteen,
       },
       {
-        label: "High-Frequency Zone",
+        label: "อ้อมรูหนอน",
         value: choiceNineteen,
       },
     ],
