--- a/module-control-index.html
+++ b/module-control-index.html
@@ -57,6 +57,8 @@
                     <hr>
                     <button id="ss-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4')">Module 6.4 รับ Minor มั้ย</button>
                     <hr>
+                    <button id="ss-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4b')">Module 6.4 รับ Minor มั้ย ไม่มีโทนิค</button>
+                    <hr>
                     <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9')">Module 6.9 กลับบ้านหรือช่วยโทนิค</button>
                     <hr>
                     <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Symph')">Module 6.9 กลับบ้านหรือช่วย Symph</button>
