--- a/current-module.html
+++ b/current-module.html
@@ -34,11 +34,11 @@
 
       <hr>
 
-      <iframe src="https://openchat-bf02b.web.app/chat/room23" style="height: 300px; width: 350px; text-align: center; border: none;" title="Iframe Example"></iframe>
+      <iframe src="https://openchat-bf02b.web.app/chat/room24" style="height: 300px; width: 350px; text-align: center; border: none;" title="Iframe Example"></iframe>
   
       <hr>
       
-      <img src="stave_map_v_large.jpg" alt="stave_map_v_large" width="375" height="666">
+      <img src="stave_map_v_เสบียง 3.jpg" alt="stave_map_v_เสบียง 3" width="375" height="666">
 
     </body>
 
