--- a/current-module.html
+++ b/current-module.html
@@ -33,12 +33,12 @@
       </div>
 
       <hr>
-
-      <iframe src="https://openchat-bf02b.web.app/chat/room21" style="height: 300px; width: 350px; text-align: center; border: none;" title="Iframe Example"></iframe>
-  
+      <div id="open-chat">
+      <iframe src="https://openchat-bf02b.web.app/chat/room24" style="height: 300px; width: 350px; text-align: center; border: none;" title="Iframe Example"></iframe>
+      </div>
       <hr>
       
-      <img src="stave_map_v.jpg" alt="stave_v" width="375" height="666">
+      <img src="stave_map_v_เสบียง 3.jpg" alt="stave_map_v_เสบียง 3" width="375" height="666">
 
     </body>
 
