--- a/module-control-index.html
+++ b/module-control-index.html
@@ -19,6 +19,10 @@
                 <h5 class="card-title">Module Controller</h5>
                     <button id="aa-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('0')">Waiting room</button>
                     <hr>
+                    <button id="ab-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('chat-on')">Chat On</button>
+                    <hr>
+                    <button id="ac-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('chat-off')">Chat Off</button>
+                    <hr>
                     <button id="bb-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1 รับไม่รับโทนิค</button>
                     <hr>
                     <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2 ไปดาว earth tau high</button>
@@ -27,15 +31,17 @@
                     <hr>
                     <button id="ee-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3b')">Module 3b รับหรือไม่รับ SYNTH</button>
                     <hr>
+                    <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
+                    <hr>
                     <button id="ff-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.1')">Module 2g มากับ SYMPH ใครปลอบ SOLO</button>
                     <hr>
                     <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.2')">Module 2g มากับ SYNTH ใครปลอบ SOLO</button>
                     <hr>
-                    <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
+                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d')">ชนะ Fight mode ไป รูหนอน/ อ้อมรูหนอน</button>
                     <hr>
-                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">Module นายพล 2d มากับ SYMPH ชนะ Fight mode</button>
+                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">ชนะ Fight mode มากับ SYMPH ไป terminal/ รูหนอน/ อ้อมรูหนอน</button>
                     <hr>
-                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">Module นายพล 2d มากับ SYNTH ชนะ Fight mode</button>
+                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">ชนะ Fight mode มากับ SYNTH ไป terminal/ รูหนอน/ อ้อมรูหนอน</button>
                     <hr>
                     <button id="kk-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2e')">Module นายพล 2e แพ้ fight mode</button>
                     <hr>
@@ -55,9 +61,15 @@
                     <hr>
                     <button id="ss-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4')">Module 6.4 รับ Minor มั้ย</button>
                     <hr>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9')">Module 6.9 กลับบ้านหรือช่วยโทนิค</button>
+                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4b')">Module 6.4 รับ Minor มั้ย ไม่มีโทนิค</button>
                     <hr>
-                    <button id="uu-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('7')">Module 7 สู้หรือยอมยานแม่ทัพ</button>
+                    <button id="uu-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9')">Module 6.9 กลับบ้านหรือช่วยโทนิค</button>
+                    <hr>
+                    <button id="vv-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Symph')">Module 6.9 กลับบ้านหรือช่วย Symph</button>
+                    <hr>
+                    <button id="ww-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Synth')">Module 6.9 กลับบ้านหรือช่วย Synth</button>
+                    <hr>
+                    <button id="xx-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('7')">Module 7 สู้หรือยอมยานแม่ทัพ</button>
               </div>
             </div>
         </div>
