--- a/module-control-index.html
+++ b/module-control-index.html
@@ -19,6 +19,10 @@
                 <h5 class="card-title">Module Controller</h5>
                     <button id="aa-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('0')">Waiting room</button>
                     <hr>
+                    <button id="ab-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('chat-on')">Chat On</button>
+                    <hr>
+                    <button id="ac-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('chat-off')">Chat Off</button>
+                    <hr>
                     <button id="bb-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1 รับไม่รับโทนิค</button>
                     <hr>
                     <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2 ไปดาว earth tau high</button>
@@ -57,15 +61,15 @@
                     <hr>
                     <button id="ss-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4')">Module 6.4 รับ Minor มั้ย</button>
                     <hr>
-                    <button id="ss-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4b')">Module 6.4 รับ Minor มั้ย ไม่มีโทนิค</button>
+                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.4b')">Module 6.4 รับ Minor มั้ย ไม่มีโทนิค</button>
                     <hr>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9')">Module 6.9 กลับบ้านหรือช่วยโทนิค</button>
+                    <button id="uu-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9')">Module 6.9 กลับบ้านหรือช่วยโทนิค</button>
                     <hr>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Symph')">Module 6.9 กลับบ้านหรือช่วย Symph</button>
+                    <button id="vv-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Symph')">Module 6.9 กลับบ้านหรือช่วย Symph</button>
                     <hr>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Synth')">Module 6.9 กลับบ้านหรือช่วย Synth</button>
+                    <button id="ww-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('6.9Synth')">Module 6.9 กลับบ้านหรือช่วย Synth</button>
                     <hr>
-                    <button id="uu-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('7')">Module 7 สู้หรือยอมยานแม่ทัพ</button>
+                    <button id="xx-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('7')">Module 7 สู้หรือยอมยานแม่ทัพ</button>
               </div>
             </div>
         </div>
