--- a/module-control-index.html
+++ b/module-control-index.html
@@ -47,13 +47,13 @@
                     <hr>
                     <button id="ll-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2f')">Module นายพล 2f แพ้ fight mode โทนิคมาช่วย</button>
                     <hr>
-                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSymph')">Module 5.1a SYMPH Terminal ใครสำรวจดาว มากับโทนิค</button>
+                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSymph')">Module 5.1a SYMPH Terminal ใครสำรวจดาว ไม่มีโทนิค</button>
                     <hr>
-                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSymph')">Module 5.1b SYMPH Terminal ใครสำรวจดาว</button>
+                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSymph')">Module 5.1b SYMPH Terminal ใครสำรวจดาว มากับโทนิค</button>
                     <hr>
-                    <button id="oo-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSynth')">Module 5.1a SYNTH Elysium ใครสำรวจดาว มากับโทนิค</button>
+                    <button id="oo-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSynth')">Module 5.1a SYNTH Elysium ใครสำรวจดาว ไม่มีโทนิค</button>
                     <hr>
-                    <button id="pp-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSynth')">Module 5.1b SYNTH Elysium ใครสำรวจดาว</button>
+                    <button id="pp-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSynth')">Module 5.1b SYNTH Elysium ใครสำรวจดาว มากับโทนิค</button>
                     <hr>
                     <button id="qq-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.2b')">Module 5.2b ให้โทนิคอยู่หรือไป</button>
                     <hr>
