--- a/current-module.html
+++ b/current-module.html
@@ -38,7 +38,7 @@
       </div>
       <hr>
       
-      <img src="stave_map_v.jpg" alt="stave_map_v" width="375" height="666">
+      <img src="stave_map_v_full.jpg" alt="stave_map_v_full" width="375" height="666">
 
     </body>
 
