--- a/modules/graph/graph6-9symph.html
+++ b/modules/graph/graph6-9symph.html
@@ -47,7 +47,7 @@ function updateChartData() {
     value: choiceThirtyNine,
     },
     {
-    label: "ช่วยพ่อ TONIC",
+    label: "พา Dr.SYMPH ไปรักษา",
     value: choiceFourty,
     },
     ],
