--- a/modules/interface/module2.html
+++ b/modules/interface/module2.html
@@ -55,7 +55,7 @@
               <h1 style="color: #f5eced">ALGORITHM PROCESSING</h1>
               <br>
                 <h3 style="color: #f5eced">"จุดหมายต่อไปคือที่ใด?"</h3>
-                <h4 style="color: #f5eced">Earth หรือ Tau Ceti G?</h4>
+                <h4 style="color: #f5eced">Earth หรือ Tau Ceti G หรือ High Frequency Zone?</h4>
                     <br>
                     <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">Earth</button>
                     <br>
