--- a/modules/interface/module6-9symph.html
+++ b/modules/interface/module6-9symph.html
@@ -59,7 +59,7 @@
             <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">กลับบ้าน</button>
             <br>
             <br>
-            <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('2')">พา SYMPH ไปรักษา</button>
+            <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('2')">พา Dr.SYMPH ไปรักษา</button>
         </div>
     </div>
 
