--- a/current-graph.html
+++ b/current-graph.html
@@ -20,6 +20,11 @@
       src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+      body {
+        background-color: #687296;
+      }
+  </style>
   </head>
   <body>
     <div id="current-graph">Current graph</div>
