--- a/modules/graph/graph1.html
+++ b/modules/graph/graph1.html
@@ -43,17 +43,17 @@
 function updateChartData() {
   FusionCharts.items["vote-chart"].setJSONData({
     chart: {
-      caption: "First Companion",
-      subCaption: "Should we help TONIC?",
+      caption: "เพื่อนร่วมทางคนแรก",
+      subCaption: "เราควรช่วย TONIC หรือไม่?",
       theme: "fusion",
     },
     data: [
       {
-        label: "Help TONIC",
+        label: "ช่วย TONIC",
         value: choiceOne,
       },
       {
-        label: "Left TONIC",
+        label: "ทิ้ง TONIC",
         value: choiceTwo,
       },
     ],
