--- a/modules/graph/graph3a.html
+++ b/modules/graph/graph3a.html
@@ -43,17 +43,17 @@
 function updateChartData() {
   FusionCharts.items["vote-chart3a"].setJSONData({
     chart: {
-      caption: "Time to make a SYMPHONIC decision.",
-      subCaption: "Let Dr.SYMPH come with us?",
+      caption: "a SYMPHONIC Decision",
+      subCaption: "ให้ Dr.SYMPH มาด้วยกันหรือไม่?",
       theme: "fusion",
     },
     data: [
       {
-        label: "Dr.SYMPH On Board",
+        label: "Dr.SYMPH ขึ้นยาน",
         value: choiceSix,
       },
       {
-        label: "Permission Declined",
+        label: "ปฎิเสธนักวิชาการ",
         value: choiceSeven,
       },
     ],
