--- a/modules/graph/graph3b.html
+++ b/modules/graph/graph3b.html
@@ -43,17 +43,17 @@
 function updateChartData() {
   FusionCharts.items["vote-chart3b"].setJSONData({
     chart: {
-      caption: "Time to make a SYNTHETIC decision.",
-      subCaption: "Let SYNTH come with us?",
+      caption: "a SYNTHETIC Decision",
+      subCaption: "ให้ SYNTH มาด้วยกันหรือไม่?",
       theme: "fusion",
     },
     data: [
       {
-        label: "SYNTH On Baord",
+        label: "ให้ SYNTH ขึ้นยาน",
         value: choiceEight,
       },
       {
-        label: "Permission Declined",
+        label: "ปฎิเสธนักท่องอวกาศ",
         value: choiceNine,
       },
     ],
