--- a/modules/graph/waiting-room.html
+++ b/modules/graph/waiting-room.html
@@ -7,10 +7,15 @@
     <title>Waiting room</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
+    <style>
+        body {
+          background-color: #687296;
+        }
+    </style>
 </head>
 <body>
-    <h1>Algorithm</h1>
-    <br>
-    <h1>standing by ...</h1>
+    <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">Algorithm</h1>
+      <br>
+      <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">standing by ...</h1>
 </body>
 </html>
