--- a/module-control-index.html
+++ b/module-control-index.html
@@ -23,6 +23,10 @@
                     <hr>
                     <button id="ac-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('chat-off')">Chat Off</button>
                     <hr>
+                    <button id="ad-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('graph-on')">Graph On</button>
+                    <hr>
+                    <button id="ae-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('graph-off')">Graph Off</button>
+                    <hr>
                     <button id="bb-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1 รับไม่รับโทนิค</button>
                     <hr>
                     <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2 ไปดาว earth tau high</button>
