--- a/current-module.html
+++ b/current-module.html
@@ -46,7 +46,7 @@
 
       <hr>
       
-      <img src="stave_map_v_full.jpg" alt="stave_map_v_full" width="375" height="666">
+      <img src="stave_map_v_update17.jpg" alt="stave_map_v_update17" width="375" height="666">
 
     </body>
 
