--- a/current-module.html
+++ b/current-module.html
@@ -41,12 +41,12 @@
       <hr>
       
       <div id="open-chat">
-      <iframe src="https://openchat-bf02b.web.app/chat/room27" style="height: 300px; width: 350px; text-align: center; border: none;" title="Iframe Example"></iframe>
+      <iframe src="https://openchat-bf02b.web.app/chat/room28" style="height: 300px; width: 350px; text-align: center; border: none;" title="Iframe Example"></iframe>
       </div>
 
       <hr>
       
-      <img src="stave_map_v_update17.jpg" alt="stave_map_v_update17" width="375" height="666">
+      <img src="stave_map_v_last.jpg" alt="stave_map_v_last" width="375" height="666">
 
     </body>
 
